--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "body-parser": "~1.0.0",
+    "cloudant": "^1.4.1",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "~4.0.0",
     "jade": "~1.3.0",
