--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "4.1.1"
+  },
   "scripts": {
     "start": "nodejs ./bin/www"
   },
