--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "4.1.1"
+    "node": "4.1.1", 
+    "npm": "2.1.x"
   },
   "scripts": {
     "start": "nodejs ./bin/www"
